--- a/index.html
+++ b/index.html
@@ -800,16 +800,17 @@
 
    <script>
     // Firebase configuration (Sử dụng cấu hình từ file kiemtracongnoiGEMININ.html)
-    const firebaseConfig = {
-      apiKey: "AIzaSyB2Y6FHuD2U0r6CM1awIee8sOmUgjq57Ck",
-      authDomain: "game-162fc.firebaseapp.com",
-      databaseURL: "https://game-162fc-default-rtdb.firebaseio.com",
-      projectId: "game-162fc",
-      storageBucket: "game-162fc.firebasestorage.app",
-      messagingSenderId: "335841270990",
-      appId: "1:335841270990:web:0742c592b49d0fadd9c49f",
-      measurementId: "G-BB8ZL0WW2S"
-    };
+ const firebaseConfig = {
+  apiKey: "AIzaSyAT-ddG7Jd1qdwrNlCgfiQ_GyyLoODl5MA",
+  authDomain: "notebook-d469b.firebaseapp.com",
+  databaseURL: "https://notebook-d469b-default-rtdb.firebaseio.com",
+  projectId: "notebook-d469b",
+  storageBucket: "notebook-d469b.firebasestorage.app",
+  messagingSenderId: "835830453697",
+  appId: "1:835830453697:web:ba485de6c981e72fe00b40",
+  measurementId: "G-P79X8EXF3G"
+};
+
 
     // Initialize Firebase
     let db = null;
